loginServer/src/main/java/org/example/loginserver/spring/rest/errors/exceptions/CredentialInvalid.java
package org.example.loginserver.spring.rest.errors.exceptions;

public class CredentialInvalid extends RuntimeException {
    public CredentialInvalid(String message) {
        super(message);
    }
}
